@@ -91,6 +91,16 @@ ImpressCMS ChangeLog
 
 == Impresscms 1.1.1==
 
+===2008-12-20 : 1.1.1 Final===
+
+* Only version number changed
+
+===2008-12-12 : 1.1.1 RC2===
+
+'''Fixed'''
+* #2354713: Security issue in SESSION id (Fixation), previous fix caused problems with some users being logged out sporadically. (vaughan)
+* XSS vulnerability in blocksadmin.php $_GET['selmod'], potential (but not necessarily vulnerable) exploit in $_GET['editor']. (GiJoe/vaughan)
+
 ===2008-12-2 : 1.1.1 RC===
 
 '''Fixed'''
